Completed first version of TOC. Wrote Technology overview intro. Added TOC numbering depth, lipsum package for debugging with dummy text. Removed .tex from input command.

--- a/arch/systemarch.tex
+++ b/arch/systemarch.tex
@@ -3,3 +3,27 @@
 % 	Developed by Daniel Peiró
 % 	ETSII, UPM 2014-2015
 \chapter{System Architecture}
+\lipsum
+\section{Client-Server Pattern}
+\subsection{Server}
+\subsection{Client}
+\section{Model-View-Controller Pattern}
+\subsection{Model}
+\subsection{View}
+\subsection{Controller}
+\section{Modular Front-end Architecture}
+\subsection{Input Modules}
+\subsubsection{Joystick}
+\subsubsection{Gamepad}
+\subsubsection{Device Orientation}
+\subsubsection{Voice Commands}
+\subsubsection{Custom Input}
+\subsection{Output Modules}
+\subsubsection{Data Monitor}
+\subsubsection{Live Video}
+\subsubsection{Live Audio}
+\subsubsection{Geolocation}
+\subsubsection{Custom Data}
+\subsection{Utility Modules}
+\subsubsection{Script Execution}
+\subsubsection{Profile Management}
