--- a/future/futuredev.tex
+++ b/future/futuredev.tex
@@ -3,3 +3,6 @@
 % 	Developed by Daniel Peiró
 % 	ETSII, UPM 2014-2015
 \chapter{Future Development}
+\section{Maintenance and Support}
+\section{Scalability}
+\section{New Additions to the Standard}
