--- a/introduction/introduction.tex
+++ b/introduction/introduction.tex
@@ -2,6 +2,5 @@
 % 	An ASLab Project,
 % 	Developed by Daniel Peiró
 % 	ETSII, UPM 2014-2015
-
 \chapter{Introduction}
-\section{Lorem Ipsum}
+\lipsum
