--- a/planning/planning.tex
+++ b/planning/planning.tex
@@ -3,3 +3,8 @@
 % 	Developed by Daniel Peiró
 % 	ETSII, UPM 2014-2015
 \chapter{Project Planning}
+\section{Work Breakdown Structure}
+\section{Gantt Chart}
+\section{Revision Control}
+\section{Budget}
+\section{Results}
