--- a/tech/techoverview.tex
+++ b/tech/techoverview.tex
@@ -3,3 +3,32 @@
 % 	Developed by Daniel Peiró
 % 	ETSII, UPM 2014-2015
 \chapter{Technology Overview}
+\epigraph{\textit{Technology frightens me to death. It’s designed by engineers to impress other engineers.
+And they always come with instruction booklets that are written by engineers for other engineers - which is 
+why almost no technology ever works.}}{\textit{John Cleese}}
+This chapter will give a general overview of the technologies used in the development of this project. 
+This will loosely entail, for each section, a brief history, the current state of the art and how it relates 
+to the project. By no means is this intended to be a comprehensive in depth look into each subject, given that 
+entire books can and have been written on each of them, but should give the reader enough information to understand 
+the following chapter, that details how the system is built and what it does with these technologies.
+\section{HTTP}
+\lipsum
+\section{HTML}
+\section{JavaScript}
+\section{CSS}
+\section{MEAN Stack}
+\subsection{NodeJS}
+\subsection{Express}
+\subsection{MongoDB}
+\subsection{AngularJS}
+\section{WebSockets}
+\section{Python}
+\section{Development Environment \& Tools}
+\subsection{Linux}
+\subsection{Sublime Text}
+\subsection{Git}
+\subsection{\LaTeX}
+\section{Hardware}
+\subsection{Khepera III}
+\subsection{Crazyflie 2}
+\subsection{Raspberry Pi 2}
