--- a/pfc.tex
+++ b/pfc.tex
@@ -49,11 +49,14 @@
 \usepackage{epigraph}
 \usepackage{hyperref}
 \usepackage{makeidx}
-\usepackage{titlesec}
+\usepackage{minted}
 \usepackage{lipsum}
 %%%% End Import Packages %%%%
 
 \graphicspath{ {./img/} } % Set image lookup path
+\hypersetup{%
+    pdfborder = {0 0 0}
+} % remove red box around links
 \makeindex % Setup Index
 \raggedbottom
 
