Finished HTML Section

--- a/bibliography/bibliography.tex
+++ b/bibliography/bibliography.tex
@@ -2,4 +2,32 @@
 % 	An ASLab Project,
 % 	Developed by Daniel Peiró
 % 	ETSII, UPM 2014-2015
-\chapter{Bibliography}
+\addcontentsline{toc}{chapter}{Bibliography}
+
+\begin{thebibliography}{99}
+
+\bibitem{httpW3}
+  The Internet Society,
+  \emph{\href{http://tools.ietf.org/html/rfc2616}{Hypertext Transfer Protocol -- HTTP/1.1}},  
+  1999.
+\bibitem{bernerslee09}
+  Tim Berners-Lee,
+  \emph{\href{http://www.ted.com/talks/tim_berners_lee_on_the_next_web?language=en}{Tim Berners-Lee TED Talk on the Next Web}},  
+  2009.
+\bibitem{raggett98}
+  Dave Raggett,
+  \emph{\href{http://www.w3.org/People/Raggett/book4/ch02.html}{Raggett on HTML 4 (Chapter 2: A history of HTML)}},  
+  1998.
+\bibitem{marshall12}
+  James Marshall,
+  \emph{\href{http://www.jmarshall.com/easy/http/}{HTTP Made Really Easy}},  
+  2012.
+\bibitem{goldfarb96}
+Charles F. Goldfarb,
+\emph{\href{http://www.sgmlsource.com/history/roots.htm}{The Roots of SGML -- A Personal Recollection}},  
+1996.
+\bibitem{pilgrim09}
+Mark Pilgrim,
+\emph{\href{http://diveintohtml5.info/index.html}{Dive Into HTML5}},  
+2009-2011.
+\end{thebibliography}
